Fixed activities GET and POST method. Updated API documentation. Updated schema of group object. Added API tests.
